minijinja/tests/snapshots/test_compiler__codegen@macro_calling_macro.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{%- from \"call_macro.txt\" import call %}\n{%- macro my_macro(value) %}[{{ value }}]{% endmacro %}\n{{- call(my_macro, 42) }}"
input_file: minijinja/tests/inputs/macro_calling_macro.txt
---
(
    [
        00000 | EmitRaw("{}\n---")  [line 1],
        00001 | BeginCapture(Discard),
        00002 | PushWith,
        00003 | LoadConst("call_macro.txt")  [line 3],
        00004 | Include(false),
        00005 | Lookup("call"),
        00006 | PopFrame,
        00007 | StoreLocal("call"),
        00008 | EndCapture,
        00009 | Jump(16)  [line 4],
        00010 | StoreLocal("value"),
        00011 | EmitRaw("["),
        00012 | Lookup("value"),
        00013 | Emit,
        00014 | EmitRaw("]"),
        00015 | Return,
        00016 | GetClosure,
        00017 | LoadConst(["value"]),
        00018 | BuildMacro("my_macro", 10, 0),
        00019 | StoreLocal("my_macro"),
        00020 | Lookup("my_macro")  [line 5],
        00021 | LoadConst(42),
        00022 | CallFunction("call", 2),
        00023 | Emit,
    ],
    {},
)
