minijinja/tests/snapshots/test_compiler__codegen@macro_closure_behavior.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{%- macro before_closure() %}{{ closure }}{% endmacro %}\n{%- set closure = 1 %}\n{%- macro after_closure() %}{{ closure }}{% endmacro %}\n{%- set closure = 2 %}\n{%- macro after_closure_reset() %}{{ closure }}{% endmacro %}\n{{ before_closure() }}\n{{ after_closure() }}\n{{ after_closure_reset() }}"
input_file: minijinja/tests/inputs/macro_closure_behavior.txt
---
(
    [
        00000 | EmitRaw("{}\n---")  [line 1],
        00001 | Jump(5)  [line 3],
        00002 | Lookup("closure"),
        00003 | Emit,
        00004 | Return,
        00005 | Enclose("closure"),
        00006 | GetClosure,
        00007 | LoadConst([]),
        00008 | BuildMacro("before_closure", 2, 0),
        00009 | StoreLocal("before_closure"),
        00010 | LoadConst(1)  [line 4],
        00011 | StoreLocal("closure"),
        00012 | Jump(16)  [line 5],
        00013 | Lookup("closure"),
        00014 | Emit,
        00015 | Return,
        00016 | Enclose("closure"),
        00017 | GetClosure,
        00018 | LoadConst([]),
        00019 | BuildMacro("after_closure", 13, 0),
        00020 | StoreLocal("after_closure"),
        00021 | LoadConst(2)  [line 6],
        00022 | StoreLocal("closure"),
        00023 | Jump(27)  [line 7],
        00024 | Lookup("closure"),
        00025 | Emit,
        00026 | Return,
        00027 | Enclose("closure"),
        00028 | GetClosure,
        00029 | LoadConst([]),
        00030 | BuildMacro("after_closure_reset", 24, 0),
        00031 | StoreLocal("after_closure_reset"),
        00032 | EmitRaw("\n"),
        00033 | CallFunction("before_closure", 0)  [line 8],
        00034 | Emit,
        00035 | EmitRaw("\n"),
        00036 | CallFunction("after_closure", 0)  [line 9],
        00037 | Emit,
        00038 | EmitRaw("\n"),
        00039 | CallFunction("after_closure_reset", 0)  [line 10],
        00040 | Emit,
    ],
    {},
)
