minijinja/tests/snapshots/test_compiler__codegen@macro_extends.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"template\": \"simple_layout.txt\"\n}\n---\n{%- extends template %}\n{%- macro foo() %}inside foo{% endmacro %}\n{%- block title %}{{ foo() }}{% endblock %}\n{%- block body %}new body{% endblock %}"
input_file: minijinja/tests/inputs/macro_extends.txt
---
(
    [
        00000 | EmitRaw("{\n  \"template\": \"simple_layout.txt\"\n}\n---")  [line 1],
        00001 | Lookup("template")  [line 5],
        00002 | LoadBlocks,
        00003 | Jump(6)  [line 6],
        00004 | EmitRaw("inside foo"),
        00005 | Return,
        00006 | GetClosure,
        00007 | LoadConst([]),
        00008 | BuildMacro("foo", 4, 0),
        00009 | StoreLocal("foo"),
        00010 | CallBlock("title")  [line 7],
        00011 | CallBlock("body")  [line 8],
    ],
    {
        "body": [
            00000 | EmitRaw("new body")  [line 8],
        ],
        "title": [
            00000 | CallFunction("foo", 0)  [line 7],
            00001 | Emit,
        ],
    },
)
