minijinja/tests/snapshots/test_compiler__codegen@macro_hoisting.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% macro first(param) %}first: {{ second(param )}}{% endmacro %}\n{% macro second(param) %}second: {{ param }}{% endmacro %}\n{{ first(42) }}"
input_file: minijinja/tests/inputs/macro_hoisting.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | Jump(8)  [line 3],
        00002 | StoreLocal("param"),
        00003 | EmitRaw("first: "),
        00004 | Lookup("param"),
        00005 | CallFunction("second", 1),
        00006 | Emit,
        00007 | Return,
        00008 | Enclose("second"),
        00009 | GetClosure,
        00010 | LoadConst(["param"]),
        00011 | BuildMacro("first", 2, 0),
        00012 | StoreLocal("first"),
        00013 | EmitRaw("\n"),
        00014 | Jump(20)  [line 4],
        00015 | StoreLocal("param"),
        00016 | EmitRaw("second: "),
        00017 | Lookup("param"),
        00018 | Emit,
        00019 | Return,
        00020 | GetClosure,
        00021 | LoadConst(["param"]),
        00022 | BuildMacro("second", 15, 0),
        00023 | StoreLocal("second"),
        00024 | EmitRaw("\n"),
        00025 | LoadConst(42)  [line 5],
        00026 | CallFunction("first", 1),
        00027 | Emit,
    ],
    {},
)
