minijinja/tests/snapshots/test_compiler__codegen@macro_import.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\"c\": \"The C Variable\"}\n---\n{% from \"include_with_var_and_macro.txt\" import title, helper, missing -%}\nmissing: {{ missing }}\ntitle: {{ title }}\nhelper: {{ helper(\"a\", \"b\") }}"
input_file: minijinja/tests/inputs/macro_import.txt
---
(
    [
        00000 | EmitRaw("{\"c\": \"The C Variable\"}\n---\n")  [line 1],
        00001 | BeginCapture(Discard),
        00002 | PushWith,
        00003 | LoadConst("include_with_var_and_macro.txt")  [line 3],
        00004 | Include(false),
        00005 | Lookup("title"),
        00006 | Lookup("helper"),
        00007 | Lookup("missing"),
        00008 | PopFrame,
        00009 | StoreLocal("missing"),
        00010 | StoreLocal("helper"),
        00011 | StoreLocal("title"),
        00012 | EndCapture,
        00013 | EmitRaw("missing: ")  [line 4],
        00014 | Lookup("missing"),
        00015 | Emit,
        00016 | EmitRaw("\ntitle: "),
        00017 | Lookup("title")  [line 5],
        00018 | Emit,
        00019 | EmitRaw("\nhelper: "),
        00020 | LoadConst("a")  [line 6],
        00021 | LoadConst("b"),
        00022 | CallFunction("helper", 2),
        00023 | Emit,
    ],
    {},
)
