minijinja/tests/snapshots/test_compiler__codegen@macro_import2.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\"c\": \"The C Variable\"}\n---\n{% import \"include_with_var_and_macro.txt\" as helpers -%}\n{{ helpers }}\nmissing: {{ helpers.missing }}\ntitle: {{ helpers.title }}\nhelper: {{ helpers.helper(\"a\", \"b\") }}"
input_file: minijinja/tests/inputs/macro_import2.txt
---
(
    [
        00000 | EmitRaw("{\"c\": \"The C Variable\"}\n---\n")  [line 1],
        00001 | BeginCapture(Discard),
        00002 | PushWith,
        00003 | LoadConst("include_with_var_and_macro.txt")  [line 3],
        00004 | Include(false),
        00005 | ExportLocals,
        00006 | PopFrame,
        00007 | StoreLocal("helpers"),
        00008 | EndCapture,
        00009 | Lookup("helpers")  [line 4],
        00010 | Emit,
        00011 | EmitRaw("\nmissing: "),
        00012 | Lookup("helpers")  [line 5],
        00013 | GetAttr("missing"),
        00014 | Emit,
        00015 | EmitRaw("\ntitle: "),
        00016 | Lookup("helpers")  [line 6],
        00017 | GetAttr("title"),
        00018 | Emit,
        00019 | EmitRaw("\nhelper: "),
        00020 | Lookup("helpers")  [line 7],
        00021 | LoadConst("a"),
        00022 | LoadConst("b"),
        00023 | CallMethod("helper", 3),
        00024 | Emit,
    ],
    {},
)
