minijinja/tests/snapshots/test_compiler__codegen@macro_kwargs.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% macro foo(a, b, c, d) %}{{ [a, b, c, d] }}{% endmacro -%}\n{{ foo(1, 2, 3) }}\n{{ foo({\"blub\": \"blah\"}) }}\n{{ foo(a=1, b=2, c=3) }}\n{{ foo(a=1, b=2, c=3, d=4) }}"
input_file: minijinja/tests/inputs/macro_kwargs.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | Jump(13)  [line 3],
        00002 | StoreLocal("d"),
        00003 | StoreLocal("c"),
        00004 | StoreLocal("b"),
        00005 | StoreLocal("a"),
        00006 | Lookup("a"),
        00007 | Lookup("b"),
        00008 | Lookup("c"),
        00009 | Lookup("d"),
        00010 | BuildList(4),
        00011 | Emit,
        00012 | Return,
        00013 | GetClosure,
        00014 | LoadConst(["a", "b", "c", "d"]),
        00015 | BuildMacro("foo", 2, 0),
        00016 | StoreLocal("foo"),
        00017 | LoadConst(1)  [line 4],
        00018 | LoadConst(2),
        00019 | LoadConst(3),
        00020 | CallFunction("foo", 3),
        00021 | Emit,
        00022 | EmitRaw("\n"),
        00023 | LoadConst({"blub": "blah"})  [line 5],
        00024 | CallFunction("foo", 1),
        00025 | Emit,
        00026 | EmitRaw("\n"),
        00027 | LoadConst({"a": 1, "b": 2, "c": 3})  [line 6],
        00028 | CallFunction("foo", 1),
        00029 | Emit,
        00030 | EmitRaw("\n"),
        00031 | LoadConst({"a": 1, "b": 2, "c": 3, "d": 4})  [line 7],
        00032 | CallFunction("foo", 1),
        00033 | Emit,
    ],
    {},
)
