minijinja/tests/snapshots/test_compiler__codegen@macro_recursive_alias.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n    \"top_level\": [\n        {\n            \"children\": [\n                {\n                    \"children\": []\n                },\n                {\n                    \"children\": []\n                }\n            ]\n        },\n        {\n            \"children\": [\n                {\n                    \"children\": []\n                }\n            ]\n        }\n    ]\n}\n---\n{%- macro nest(children) -%}\n    <nest>\n    {%- for child in children -%}\n        <child>{{ nest(child.children) }}</child>\n    {%- endfor -%}\n    </nest>\n{%- endmacro -%}\n{% set not_nest = nest %}\n{{ not_nest(top_level) }}"
input_file: minijinja/tests/inputs/macro_recursive_alias.txt
---
(
    [
        00000 | EmitRaw("{\n    \"top_level\": [\n        {\n            \"children\": [\n                {\n                    \"children\": []\n                },\n                {\n                    \"children\": []\n                }\n            ]\n        },\n        {\n            \"children\": [\n                {\n                    \"children\": []\n                }\n            ]\n        }\n    ]\n}\n---")  [line 1],
        00001 | Jump(18)  [line 23],
        00002 | StoreLocal("children"),
        00003 | EmitRaw("<nest>")  [line 24],
        00004 | Lookup("children")  [line 25],
        00005 | PushLoop(1),
        00006 | Iterate(15),
        00007 | StoreLocal("child"),
        00008 | EmitRaw("<child>")  [line 26],
        00009 | Lookup("child"),
        00010 | GetAttr("children"),
        00011 | CallFunction("nest", 1),
        00012 | Emit,
        00013 | EmitRaw("</child>"),
        00014 | Jump(6),
        00015 | PopFrame,
        00016 | EmitRaw("</nest>")  [line 28],
        00017 | Return,
        00018 | Enclose("nest"),
        00019 | GetClosure,
        00020 | LoadConst(["children"]),
        00021 | BuildMacro("nest", 2, 0),
        00022 | StoreLocal("nest"),
        00023 | Lookup("nest")  [line 30],
        00024 | StoreLocal("not_nest"),
        00025 | EmitRaw("\n"),
        00026 | Lookup("top_level")  [line 31],
        00027 | CallFunction("not_nest", 1),
        00028 | Emit,
    ],
    {},
)
