minijinja/tests/snapshots/test_compiler__codegen@math.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"var\": 5\n}\n---\nshould be -2.5: {{ 1.5 * 2.5 * 2 / 3 - var }}\nshould be -3.0: {{ 1.5 * 2.5 * 2 // 3 - var }}\nshould be 2.0: {{ 4 / 2 }}\nshould be 2: {{ 4 // 2 }}\nshould be 0: {{ 1 - 1 }}\nshould be 0: {{1-1}}\nshould be -1: {{ -1 }}"
input_file: minijinja/tests/inputs/math.txt
---
(
    [
        00000 | EmitRaw("{\n  \"var\": 5\n}\n---\nshould be -2.5: ")  [line 1],
        00001 | LoadConst(1.5)  [line 5],
        00002 | LoadConst(2.5),
        00003 | Mul,
        00004 | LoadConst(2),
        00005 | Mul,
        00006 | LoadConst(3),
        00007 | Div,
        00008 | Lookup("var"),
        00009 | Sub,
        00010 | Emit,
        00011 | EmitRaw("\nshould be -3.0: "),
        00012 | LoadConst(1.5)  [line 6],
        00013 | LoadConst(2.5),
        00014 | Mul,
        00015 | LoadConst(2),
        00016 | Mul,
        00017 | LoadConst(3),
        00018 | IntDiv,
        00019 | Lookup("var"),
        00020 | Sub,
        00021 | Emit,
        00022 | EmitRaw("\nshould be 2.0: "),
        00023 | LoadConst(4)  [line 7],
        00024 | LoadConst(2),
        00025 | Div,
        00026 | Emit,
        00027 | EmitRaw("\nshould be 2: "),
        00028 | LoadConst(4)  [line 8],
        00029 | LoadConst(2),
        00030 | IntDiv,
        00031 | Emit,
        00032 | EmitRaw("\nshould be 0: "),
        00033 | LoadConst(1)  [line 9],
        00034 | LoadConst(1),
        00035 | Sub,
        00036 | Emit,
        00037 | EmitRaw("\nshould be 0: "),
        00038 | LoadConst(1)  [line 10],
        00039 | LoadConst(1),
        00040 | Sub,
        00041 | Emit,
        00042 | EmitRaw("\nshould be -1: "),
        00043 | LoadConst(-1)  [line 11],
        00044 | Emit,
    ],
    {},
)
